--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.1.1",
+  "devDependencies": {
+    "jest": "^27.5.1"
+  }
 }
