--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
   },
   "packageManager": "yarn@3.1.1",
   "devDependencies": {
-    "jest": "^27.5.1"
+    "@types/react": "^17.0.39",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.28.0",
+    "jest": "^27.5.1",
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1"
   }
 }
