--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
+  "browser": {
+    "fs": false
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.4.3",
     "@mui/styled-engine-sc": "^5.4.2",
+    "fs": "^0.0.1-security",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
