add Attacking and defending co to damage calculator

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "max-len": "off",
+        "react/prop-types": "off"
     }
 }
