--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "rules": {
         "react/react-in-jsx-scope": "off",
         "max-len": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "react/jsx-key": "off"
     }
 }
