--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.4.3",
     "@mui/styled-engine-sc": "^5.4.2",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
